<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/cardItem"
    style="@style/Widget.Material3.CardView.Outlined"
    android:layout_margin="@dimen/item_margin"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_rounded"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_margin2"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageArticles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:adjustViewBounds="true"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.App.Image"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="@dimen/item_margin"
            android:text="@string/request_none_data" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/item_text_size"
            android:text="@string/request_none_data" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/item_text_size"
            android:maxLines="3"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:text="@string/request_none_data" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDetail"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeColor="@color/colorPrimary"
            android:textSize="@dimen/item_text_size"
            android:layout_marginTop="@dimen/item_margin"
            android:text="@string/action_show_detail"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>